# Projet-VAL

./: CMakeLists.txt  README.md  README.txt
Projet VAL/: CMakeLists.txt  Projet VAL.cpp  Projet VAL.h  main.cpp  rame.c
Projet_fichier/: CMakeLists.txt  classe.h  def_classe.cpp  main.cpp
enc_temp_folder/6fd3c9111f70db9422994ab78832f3/: def_classe.cpp
