# CMakeList.txt : projet CMake pour Projet VAL, incluez la source et définissez
# la logique spécifique au projet ici.
#
Project(Test)

# Ajoutez une source à l'exécutable de ce projet.
add_executable (CMakeTarget "def_classe.cpp" "main.cpp")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
